# alisia

./: CHANGELOG.md  LICENSE  README.md  alisia.cabal
app/: AlisiaBasic.hs  AlisiaEval.hs  AlisiaOtherPrim.hs  AlisiaParsers.hs  AlisiaPrimHelper.hs  AlisiaPrimitives.hs  AlisiaRepl.hs  AlisiaShow.hs  AlisiaStringPrim.hs  AlisiaUnary.hs  AlisiaVar.hs  Main.hs  lib.ali
