cabal-version:      2.4
name:               alisia
version:            0.2.1.0
synopsis:           Lisp Bahasa Indonesia

-- A longer description of the package.
description: Bahasa pemrograman Lisp dalam Bahasa Indonesia
homepage:           https://github.com/ulmalana/alisia

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             riz
maintainer:         muhamaul@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable alisia
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: AlisiaRepl, AlisiaBasic, AlisiaEval, AlisiaOtherPrim, AlisiaParsers, AlisiaPrimHelper, AlisiaPrimitives, AlisiaShow, AlisiaStringPrim, AlisiaUnary, AlisiaVar

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, array >= 0.5, parsec >= 3.1, mtl
    hs-source-dirs:   app
    default-language: Haskell2010
